# BetterCppLib

./: README.md  build-eclipse-ninja-clang.cmd  build.cmd
CMakeSource/: CMakeLists.txt
CMakeSource/include/BetterCpp/: BetterCpp.hpp  Core.hpp  Exceptions.hpp  Functions.hpp  configurator.hpp  macros.h  namespaces.h  object_cloner.hpp  stdafx.hpp
CMakeSource/include/BetterCpp/Exceptions/: Exception.hpp  FileNotFoundException.hpp  IndexOutOfRangeException.hpp  InvalidArgException.hpp  JSONHasNotMemberException.hpp  JSONParsingException.hpp  NullPtrException.hpp  OpenALException.hpp  RemovedException.hpp  UnknownFormatException.hpp
CMakeSource/include/BetterCpp/Interfaces/: Interfaces.hpp
CMakeSource/include/BetterCpp/Math/: Math.hpp
CMakeSource/include/BetterCpp/Objects/: BasePtr.hpp  Event.hpp  List.hpp  Objects.hpp  Pointers.hpp  PtrTypes.hpp  RegisterCollection.hpp  String.hpp
CMakeSource/lib/include/magic_enum/: magic_enum.hpp
CMakeSource/src/: Core.cpp  Exception.cpp  Functions.cpp  Math.cpp  Object.cpp  Pointers.cpp  String.cpp  config.h  pch.hpp
